GLsurfaceView刷新， 通过intent跳转再返回达到刷新的目的

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".TriangleActivity" />
-        <activity android:name=".DrawGraphActivity"></activity>
+        <activity android:name=".DrawGraphActivity" />
+        <activity android:name=".EmptyActivity"></activity>
     </application>
 
 </manifest>
